refactor: simplify apikeys list response to array
