# docs/swagger.json
@@ -30,7 +30,10 @@
                     "200": {
                         "description": "List of API keys",
                         "schema": {
-                            "$ref": "#/definitions/apikeys.ListAPIKeysResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/apikeys.APIKeyInfo"
+                            }
                         }
                     },
                     "401": {
@@ -621,17 +624,6 @@
                 "error": {
                     "type": "string",
                     "example": "message"
-                }
-            }
-        },
-        "apikeys.ListAPIKeysResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/apikeys.APIKeyInfo"
-                    }
                 }
             }
         },
